@@ -1,5 +1,8 @@
 2014-06-26  Jason Merrill  <jason@redhat.com>
 
+	* parser.c (cp_parser_for_init_statement): Change range-for error
+	to pedwarn.
+
 	N3994 Ranged-based for-loops: The Next Generation
 	* parser.c (cp_lexer_nth_token_is): New.
 	(cp_parser_for_init_statement): Allow "for (id : init)".
